# swagweb-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  init.ps1  init.sh  pyproject.toml
crates/swagweb_request/: Cargo.toml
crates/swagweb_request/src/: content.rs  headers.rs  lib.rs  parser.rs
docs/user-stories/: extractor.md  middleware.md  middleware_simple.md  postware_simple.md  router.md  simple.md  tasks.md
src/: config.rs  lib.rs
src/app/: app.rs  extractors.rs  mod.rs
src/http/: mod.rs
src/http/context/: context.rs  mod.rs
src/http/request/: body.rs  error.rs  headers.rs  method.rs  mod.rs  py_socket_addr_v4.rs
src/http/response/: mod.rs  response.rs
src/routing/: middleware.rs  mod.rs  node.rs
src/routing/middleware/: callback.rs  mod.rs  pythonize.rs
src/utils/: mod.rs  request_reader.rs
