[package]
name = "swagweb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "swagweb_rs"
crate-type = ["cdylib"]

[dependencies]
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.38.0", features = ["full"] }
multer = { version = "3.1.0", features = ["all"] }
thiserror = "1.0.62"
pyo3 = "0.21.1"
http-body-util = "0.1.2"
futures-util = "0.3.30"
http = "1.1.0"
tempfile = "3.10.1"
