[package]
name = "swagweb_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3.workspace = true
hyper.workspace = true
http-body-util.workspace = true
futures-util.workspace = true
getset.workspace = true
thiserror.workspace = true
multer.workspace = true
tempfile.workspace = true
tokio.workspace = true